# nimblbot_welding

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  rpclib_2.3.0-1_amd64.deb
documentation/html/: .buildinfo  genindex.html  gpio_controllers_iron_all.html  index.html  interface_custom_msgs.html  interface_rviz_plugin.html  launch.html  objects.inv  package.html  packages.html  py-modindex.html  search.html  searchindex.js  telesoud_api.html  telesoud_nimblbot_interface.html  translator.html  usage.html  welding_command_handler.html  welding_scene_publisher.html
documentation/html/_modules/: index.html
documentation/html/_modules/telesoud_nimblbot_interface/: translator.html  welding_command_handler.html
documentation/html/_sources/: gpio_controllers_iron_all.rst.txt  index.rst.txt  interface_custom_msgs.rst.txt  interface_rviz_plugin.rst.txt  launch.rst.txt  package.rst.txt  packages.rst.txt  telesoud_api.rst.txt  telesoud_nimblbot_interface.rst.txt  usage.rst.txt  welding_command_handler.rst.txt
gpio_controllers_iron_all/custom_control_msgs/: CMakeLists.txt  package.xml
gpio_controllers_iron_all/custom_realtime_tools/: CMakeLists.txt  package.xml
gpio_controllers_iron_all/gpio_controllers_iron/: CMakeLists.txt  package.xml
gpio_controllers_iron_all/gpio_controllers_iron/include/gpio_controllers/: gpio_command_controller.hpp
gpio_controllers_iron_all/gpio_controllers_iron/test/: test_gpio_command_controller.cpp
interface_custom_msgs/: CMakeLists.txt  package.xml
interface_custom_msgs/msg/: Command.msg  CommandStatus.msg  RobotData.msg  TelesoudInstruction.msg
interface_rviz_plugin/: CMakeLists.txt  package.xml  plugins_description.xml
interface_rviz_plugin/include/interface_rviz_plugin/: interface_rviz_plugin.hpp
interface_rviz_plugin/include/weez_touch_teleop_rviz_panel/: interface_rviz_plugin.hpp
interface_rviz_plugin/src/: interface_rviz_plugin.cpp
telesoud_api/: CMakeLists.txt  package.xml
telesoud_api/include/: InstructionToRobotCode.hpp  api_node.hpp  communicationWithTelesoudStructures.hpp
telesoud_api/include_/: api_node.hpp  communicationWithTelesoudStructures.hpp  dataFromAndToTelesoudTranslator.hpp
telesoud_api/launch/: virtual_robot_start.launch.py
telesoud_api/src/: api_node.cpp  dataFromAndToTelesoudTranslator.cpp
telesoud_api/src_/: api.cpp  api_node.cpp  dataFromAndToTelesoudTranslator.cpp
telesoud_msgs/: package.xml
telesoud_msgs/install/: local_setup.sh  setup.sh
telesoud_msgs/install/telesoud_msgs/include/telesoud_msgs/telesoud_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  telesoud_instruction.h  telesoud_instruction.hpp
telesoud_msgs/install/telesoud_msgs/share/ament_index/resource_index/package_run_dependencies/: telesoud_msgs
telesoud_msgs/install/telesoud_msgs/share/ament_index/resource_index/parent_prefix_path/: telesoud_msgs
telesoud_msgs/install/telesoud_msgs/share/telesoud_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
telesoud_msgs/install/telesoud_msgs/share/telesoud_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_telesoud_msgs__rosidl_generator_cExport-noconfig.cmake  export_telesoud_msgs__rosidl_generator_cppExport.cmake  export_telesoud_msgs__rosidl_generator_pyExport-noconfig.cmake  export_telesoud_msgs__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  telesoud_msgsConfig-version.cmake  telesoud_msgsConfig.cmake  telesoud_msgs__rosidl_typesupport_cExport-noconfig.cmake  telesoud_msgs__rosidl_typesupport_cppExport.cmake
telesoud_msgs/install/telesoud_msgs/share/telesoud_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
telesoud_msgs/install/telesoud_msgs/share/telesoud_msgs/msg/: TelesoudInstruction.idl  TelesoudInstruction.json  TelesoudInstruction.msg
telesoud_msgs/log/: latest_build
telesoud_nimblbot_interface/: package.xml  setup.cfg  setup.py
telesoud_nimblbot_interface/config/: projet_soudure.rviz
telesoud_nimblbot_interface/docs/source/: conf.py  index.rst  launch.rst  packages.rst  telesoud_nimblbot_interface.rst  translator.rst  welding_modular_control.rst  welding_scene_publisher.rst
telesoud_nimblbot_interface/docs/source/_static/: custom.css
telesoud_nimblbot_interface/launch/: telesoud_nimblbot_interface_120.launch.py  telesoud_nimblbot_interface_55.launch.py
telesoud_nimblbot_interface/telesoud_nimblbot_interface/: .telesoud_to_cartesian_command_interface.py.swp  telesoud_to_cartesian_command_interface.py  translator.py  welding_cartesian_command_for_telesoud.py  welding_command_handler.py  welding_modular_control.py
telesoud_nimblbot_interface/telesoud_nimblbot_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
telesoud_nimblbot_interface/telesoud_nimblbot_interface/log/: latest_build
telesoud_nimblbot_interface/welding_meshes/: NB55_torche_laser_low.stl
weez_touch_teleop_rviz_panel/: package.xml
weez_touch_teleop_rviz_panel/include/weez_touch_teleop_rviz_panel/: .weez_touch_teleop_rviz_panel.hpp.swp  weez_touch_teleop_rviz_panel.hpp
weez_touch_teleop_rviz_panel/src/: .weez_touch_teleop_rviz_panel.cpp.swp  weez_touch_teleop_rviz_panel.cpp
welding_robot_configurations/: nb120_3m_welding.yaml  nb55_v7_welding.yaml
welding_scene_publisher/: package.xml  setup.cfg  setup.py  welding_scene_publisher.py
welding_scene_publisher/scene_meshes/: Cuve.stl  Cylindre.stl  SoudureSelleCheval.stl  base.stl
welding_scene_publisher/welding_scene_publisher/: welding_scene_publisher.py
(+11 files in other folders)
