<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telesoud_api</name>
  <version>1.0.0</version>
  <description>The telesoud API package</description>
  <maintainer email="lpa@weez-u-welding.com">weez-u</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>builtin_interfaces</build_depend>
  <depend>std_srvs</depend>
  <depend>gpio_controllers</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>interface_custom_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
