<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telesoud_nimblbot_interface</name>
  <version>0.9.0</version>
  <description>ROS2 package for Telesoud WeezTouch controller and NimblBot robots interface</description>
  <maintainer email="tcourtois@nimbl-bot.com">Thibault Courtois</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>interface_custom_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>nimblpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
